lowercase the one jpeg

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ additions, all approved by the zoning board of the city of Hudson.</p>
             <a href="cottageMedia/HudsonCottageWebPhotos/2.jpg" data-lightbox="fullGallery">
                 <img src="cottageMedia/HudsonCottageWebPhotos/2.jpg"></a>
             <a href="cottageMedia/HudsonCottageWebPhotos/3.jpg" data-lightbox="fullGallery">
-                <img src="cottageMedia/HudsonCottageWebPhotos/3.JPG"></a>
+                <img src="cottageMedia/HudsonCottageWebPhotos/3.jpg"></a>
             
             <a href="cottageMedia/HudsonCottageWebPhotos/4.jpg" data-lightbox="fullGallery"> 
                 <img src="cottageMedia/HudsonCottageWebPhotos/4.jpg"></a>
