Update facebook line

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@ that make you feel like you’re living in the English countryside.</p>
             <p>The sellers are also including their architectural plans for future renovations and
 additions, all approved by the zoning board of the city of Hudson.</p>
             <p>Schedule a private tour! CALL:
-330-283- 7505, <a href="mailto:karen@nye.net" target="blank">EMAIL</a> or <a href="https://www.facebook.com/The-Hudson-Street-Cottage-824667857718636/" target="blank" > <i class="fa fa-lg fa-facebook-official" aria-hidden="true"></i></a></p>
-            <p>  </p>
+330-283- 7505, <a href="mailto:karen@nye.net" target="blank">EMAIL</a></p>
+            <p> For the most up-to-date info come to our   <a href="https://www.facebook.com/The-Hudson-Street-Cottage-824667857718636/" target="blank" > <i class="fa fa-2x fa-facebook-official" aria-hidden="true"></i></a> </p>
         </div>
         
         
